--- a/project3/makefile
+++ b/project3/makefile
@@ -1,16 +1,15 @@
 CFLAGS = -Wall -g
 
-all: project3
-	make project3
+all: addem
 
-project3: project3.o mailbox.o
-	gcc $(CFLAGS) project3.o mailbox.o -o addem -lm -lpthread -lrt
+addem: addem.o mailbox.o
+	gcc $(CFLAGS) addem.o mailbox.o -o addem -lm -lpthread -lrt
 
-project3.o: project3.c mailbox.h
-	gcc $(CFLAGS) -c project3.c -o project3.o
+addem.o: addem.c mailbox.h
+	gcc $(CFLAGS) -c addem.c -o addem.o
 
 mailbox.o: mailbox.c
 	gcc $(CFLAGS) -c mailbox.c -o mailbox.o
 
 clean:
-	rm -f project3.o mailbox.o project3
+	rm -f addem.o mailbox.o addem
