finished most of project 3

--- a/project3/makefile
+++ b/project3/makefile
@@ -1,15 +1,26 @@
 CFLAGS = -Wall -g
+LIB = -lpthread
+CC = gcc
 
-all: addem
+all: addem life
+
+life: life.o board.o
+	$(CC) $(CFLAGS) life.o board.o -o life $(LIB)
+
+life.o: life.c board.h
+	$(CC) $(CFLAGS) -c life.c -o life.o
+
+board.o: board.c
+	$(CC) $(CFLAGS) -c board.c -o board.o
 
 addem: addem.o mailbox.o
-	gcc $(CFLAGS) addem.o mailbox.o -o addem -lm -lpthread -lrt
+	$(CC) $(CFLAGS) addem.o mailbox.o -o addem $(LIB)
 
 addem.o: addem.c mailbox.h
-	gcc $(CFLAGS) -c addem.c -o addem.o
+	$(CC) $(CFLAGS) -c addem.c -o addem.o
 
 mailbox.o: mailbox.c
-	gcc $(CFLAGS) -c mailbox.c -o mailbox.o
+	$(CC) $(CFLAGS) -c mailbox.c -o mailbox.o
 
 clean:
-	rm -f addem.o mailbox.o addem
+	rm -f addem.o mailbox.o addem life.o board.o life
